--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,7 +4,7 @@
 
 //Миксины и переменные
 @import "./mixins.scss";
-@import "./vareables.scss";
+@import "./variables.scss";
 
 //Общие блоки для всех страниц
 @import "./blocks/page-header.scss";
