--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,25 +1,16 @@
 .page {
   height: 100vh;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 18px;
   line-height: 27px;
   box-sizing: border-box;
 }
 
 .page__body {
-  font-family: "Oswald", sans-serif;
-  min-height: 100vh;
   min-width: max-content;
+  min-height: 100vh;
   color: #000000;
   margin: 0;
-
-  @media (min-width: $tablet-width) {
-    margin: 0 auto;
-  }
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
