--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 0;
-  padding-bottom: 24px;
+  padding: 0 0 24px 0;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -41,13 +40,6 @@
 }
 
 .product__button--other {
-  @media (min-width: $tablet-width) {
-    width: auto;
-    padding: 0;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-
   @media (min-width: $desktop-width) {
     width: 244px;
   }
