--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,6 +3,8 @@
   background-repeat: no-repeat;
   background-position: top center;
   min-width: max-content;
+  padding-top: 27px;
+  padding-bottom: 20px;
 
   @media (min-width: $tablet-width) {
     background: none;
@@ -31,23 +33,19 @@
   @include common-title;
   color: $base-white;
   margin: 0;
-  padding-top: 27px;
-  padding-bottom: 25px;
+  padding: 0 0 25px 0;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 60px;
     text-align: left;
     color: #000000;
-    padding: 0;
     grid-column: 1 / 3;
   }
 
   @media (min-width: $desktop-width) {
     text-align: left;
-    padding: 0;
     padding-left: 80px;
-    margin: 0;
     margin-bottom: 40px;
   }
 }
@@ -89,8 +87,6 @@
 }
 
 .promo__button {
-  margin-bottom: 20px;
-
   @media (min-width: $tablet-width) {
     width: 244px;
     margin-bottom: 0;
