--- a/3/css/style.css
+++ b/3/css/style.css
@@ -19,8 +19,10 @@
   font-style: normal;
   font-display: swap;
 }
-.page {
-  height: 100vh;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 .visually-hidden {
@@ -57,12 +59,14 @@
   .page-header__container {
     display: flex;
     justify-content: space-between;
-    padding: 25px 0;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 }
 @media (min-width: 1440px) {
   .page-header__container {
-    padding: 55px 0;
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 }
 
@@ -142,11 +146,9 @@
     line-height: 30px;
   }
 }
-
 .main-nav__link:hover {
   opacity: 0.6;
 }
-
 .main-nav__link:active {
   opacity: 0.3;
 }
@@ -162,6 +164,12 @@
 .main-nav--is-close .main-nav__list {
   display: none;
 }
+@media (min-width: 768px) {
+  .main-nav--is-close .main-nav__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
 
 .main-nav--nojs .btn-burger {
   display: none;
@@ -173,21 +181,6 @@
 }
 
 @media (min-width: 768px) {
-  .main-nav--is-close .main-nav__list {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .main-nav__list--active::after {
-    content: "";
-    position: relative;
-    display: block;
-    bottom: -4px;
-    width: 100%;
-    height: 2px;
-    border-bottom: 2px solid #68b738;
-  }
-
   .main-nav__link--active::after {
     content: "";
     position: relative;
@@ -198,6 +191,7 @@
     border-bottom: 2px solid #68b738;
   }
 }
+
 @media (min-width: 1440px) {
   .main-nav__list--index a {
     color: #ffffff;
@@ -216,31 +210,55 @@
   }
 }
 
+.main-nav--is-close .btn-burger::before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 10px;
+  left: 8px;
+  width: 24px;
+  height: 2px;
+  background-color: #000000;
+  box-shadow: 0 8px 0 0 #000000, 0 16px 0 0 #000000;
+}
+
+.main-nav--is-open .btn-burger {
+  position: absolute;
+}
+.main-nav--is-open .btn-burger::before, .main-nav--is-open .btn-burger::after {
+  content: "";
+  position: absolute;
+  top: 19px;
+  right: 7px;
+  width: 24px;
+  height: 2px;
+  background-color: #000000;
+  transform: rotate(45deg);
+  box-shadow: none;
+}
+.main-nav--is-open .btn-burger::after {
+  transform: rotate(-45deg);
+}
+
 .page {
   height: 100vh;
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 18px;
   line-height: 27px;
   box-sizing: border-box;
 }
 
 .page__body {
-  font-family: "Oswald", sans-serif;
-  min-height: 100vh;
   min-width: max-content;
+  min-height: 100vh;
   color: #000000;
   margin: 0;
-}
-@media (min-width: 768px) {
-  .page__body {
-    margin: 0 auto;
-  }
+  display: flex;
+  flex-direction: column;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+.main {
+  flex-grow: 1;
 }
 
 .logo {
@@ -470,36 +488,6 @@
   }
 }
 
-.main-nav--is-close .btn-burger::before {
-  content: "";
-  position: absolute;
-  display: block;
-  top: 10px;
-  left: 8px;
-  width: 24px;
-  height: 2px;
-  background-color: #000000;
-  box-shadow: 0 8px 0 0 #000000, 0 16px 0 0 #000000;
-}
-
-.main-nav--is-open .btn-burger {
-  position: absolute;
-}
-.main-nav--is-open .btn-burger::before, .main-nav--is-open .btn-burger::after {
-  content: "";
-  position: absolute;
-  top: 19px;
-  right: 7px;
-  width: 24px;
-  height: 2px;
-  background-color: #000000;
-  transform: rotate(45deg);
-  box-shadow: none;
-}
-.main-nav--is-open .btn-burger::after {
-  transform: rotate(-45deg);
-}
-
 .map {
   height: 362px;
 }
@@ -528,6 +516,8 @@
   background-repeat: no-repeat;
   background-position: top center;
   min-width: max-content;
+  padding-top: 27px;
+  padding-bottom: 20px;
 }
 @media (min-width: 768px) {
   .promo {
@@ -563,8 +553,7 @@
   line-height: 36px;
   color: #ffffff;
   margin: 0;
-  padding-top: 27px;
-  padding-bottom: 25px;
+  padding: 0 0 25px 0;
 }
 @media (min-width: 768px) {
   .promo__title {
@@ -572,16 +561,13 @@
     line-height: 60px;
     text-align: left;
     color: #000000;
-    padding: 0;
     grid-column: 1/3;
   }
 }
 @media (min-width: 1440px) {
   .promo__title {
     text-align: left;
-    padding: 0;
     padding-left: 80px;
-    margin: 0;
     margin-bottom: 40px;
   }
 }
@@ -625,9 +611,6 @@
   }
 }
 
-.promo__button {
-  margin-bottom: 20px;
-}
 @media (min-width: 768px) {
   .promo__button {
     width: 244px;
@@ -652,9 +635,19 @@
   color: rgba(255, 255, 255, 0.3);
 }
 
+.program {
+  margin: auto;
+  padding-bottom: 20px;
+}
+@media (min-width: 768px) {
+  .program {
+    width: 708px;
+    padding-bottom: 45px;
+  }
+}
 @media (min-width: 1440px) {
   .program {
-    margin-bottom: 70px;
+    width: 1220px;
   }
 }
 
@@ -663,10 +656,11 @@
   padding: 0;
   list-style: none;
   text-align: center;
+  display: grid;
+  gap: 20px;
 }
 @media (min-width: 1440px) {
   .program__list {
-    display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
   }
@@ -676,24 +670,21 @@
   background-color: #f2f2f2;
   padding: 30px 33px 18px 20px;
   text-align: left;
-  margin-bottom: 20px;
   position: relative;
+  margin: 0;
 }
 @media (min-width: 768px) {
   .program__item {
     width: 708px;
     padding: 77px 316px 53px 52px;
-    margin-bottom: 30px;
   }
 }
 @media (min-width: 1440px) {
   .program__item {
     width: 570px;
-    margin: 0;
     padding: 77px 61px 55px 52px;
   }
 }
-
 .program__item::before {
   content: "";
   width: 50px;
@@ -732,8 +723,7 @@
   line-height: 37px;
   text-transform: uppercase;
   padding-left: 70px;
-  margin: 0;
-  margin-bottom: 29px;
+  margin: 0 0 29px 0;
 }
 @media (min-width: 768px) {
   .program__title {
@@ -763,43 +753,30 @@
   .program__text {
     font-size: 16px;
     line-height: 24px;
-    padding: 0;
+    padding: 0 0 40px 0;
     margin: 0;
     border: none;
-    margin-bottom: 48px;
   }
 }
 @media (min-width: 1440px) {
   .program__text {
-    margin: 0;
-    margin-bottom: 23px;
+    margin: 0 0 23px 0;
   }
 }
 
 .program__link {
   text-decoration: none;
   display: inline-block;
-  color: #000000;
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
   text-transform: uppercase;
+  color: #000000;
   margin-top: 15px;
 }
 @media (min-width: 768px) {
   .program__link {
     line-height: 30px;
-  }
-}
-
-@media (min-width: 768px) {
-  .program__item:last-child {
-    margin-bottom: 45px;
-  }
-}
-@media (min-width: 1440px) {
-  .program__item:last-child {
-    margin: 0;
   }
 }
 
@@ -814,9 +791,8 @@
 }
 @media (min-width: 1440px) {
   .sample {
-    padding: 0;
+    padding: 0 0 75px 0;
     background-image: linear-gradient(#ffffff 25%, #eaeaea 25%);
-    padding-bottom: 75px;
   }
 }
 
@@ -827,8 +803,8 @@
 @media (min-width: 1440px) {
   .sample__container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
     grid-template-areas: "title slider" "paragraph slider" "statistics slider";
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: auto 210px 210px;
   }
 }
@@ -837,14 +813,12 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
-  margin: 0;
-  margin-bottom: 40px;
+  margin: 0 0 40px 0;
 }
 @media (min-width: 768px) {
   .sample__title {
     font-size: 60px;
     line-height: 60px;
-    margin: 0;
     margin-bottom: 60px;
   }
 }
@@ -860,8 +834,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  margin: 0;
-  margin-bottom: 20px;
+  margin: 0 0 20px 0;
 }
 @media (min-width: 768px) {
   .sample__text {
@@ -869,7 +842,6 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    margin: 0;
     margin-bottom: 55px;
   }
 }
@@ -926,8 +898,7 @@
 
 .sample__value {
   text-transform: uppercase;
-  margin: 0;
-  margin-top: 15px;
+  margin: 15px 0 0 0;
   text-align: center;
   font-size: 24px;
   line-height: 24px;
@@ -1062,8 +1033,7 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
-  margin: 0;
-  margin-bottom: 40px;
+  margin: 0 0 40px 0;
   padding: 0;
 }
 @media (min-width: 768px) {
@@ -1083,13 +1053,11 @@
 .advantages__item {
   position: relative;
   padding-left: 80px;
-  margin: 0;
-  margin-bottom: 24px;
+  margin: 0 0 24px 0;
 }
 @media (min-width: 768px) {
   .advantages__item {
     padding: 0;
-    margin: 0;
     margin-bottom: 57px;
     align-self: end;
   }
@@ -1134,8 +1102,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 0;
-  padding-bottom: 24px;
+  padding: 0 0 24px 0;
 }
 @media (min-width: 768px) {
   .product {
@@ -1182,22 +1149,10 @@
   }
 }
 
-@media (min-width: 768px) {
-  .product__button--other {
-    width: auto;
-    padding: 0;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-}
 @media (min-width: 1440px) {
   .product__button--other {
     width: 244px;
   }
-}
-
-.catalog__wrapper {
-  width: 50%;
 }
 
 .catalog {
@@ -1212,6 +1167,10 @@
   .catalog {
     padding: 0;
   }
+}
+
+.catalog__wrapper {
+  width: 50%;
 }
 
 .catalog__list {
@@ -1279,12 +1238,7 @@
 }
 @media (min-width: 1440px) {
   .catalog__title--other {
-    font-family: "Oswald", sans-serif;
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 36px;
     grid-column: 1/4;
-    margin-bottom: 80px;
   }
 }
 
