--- a/source/styles/blocks/program.scss
+++ b/source/styles/blocks/program.scss
@@ -78,7 +78,7 @@
   line-height: 37px;
   text-transform: uppercase;
   padding-left: 70px;
-  margin: 0 0 29px 0;
+  margin: 0 0 29px;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
@@ -102,13 +102,13 @@
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 24px;
-    padding: 0 0 40px 0;
+    padding: 0 0 40px;
     margin: 0;
     border: none;
   }
 
   @media (min-width: $desktop-width) {
-    margin: 0 0 23px 0;
+    margin: 0 0 23px;
   }
 }
 
