--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -33,7 +33,7 @@
   @include common-title;
   color: $base-white;
   margin: 0;
-  padding: 0 0 25px 0;
+  padding: 0 0 25px;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
