добавляет промо изображение на гл.страницу

--- a/source/styles/mixins.scss
+++ b/source/styles/mixins.scss
@@ -18,14 +18,14 @@
 //Параметры заголовков
 
 @mixin common-title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
 }
 
 @mixin common-title-big {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 60px;
   line-height: 60px;
@@ -35,28 +35,28 @@
 //Параметры основгого текста на страницах
 
 @mixin common-text {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Verdana", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
 }
 
 @mixin common-text-big {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 30px;
 }
 
 @mixin common-text-tablet {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Verdana", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
 }
 
 @mixin form-common-text {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
@@ -66,7 +66,7 @@
 //Параметры заголовков в карточке товаров
 
 @mixin product-title {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
@@ -74,21 +74,21 @@
 
 @mixin product-info {
   color: $dark-gray;
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Verdana", sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
 }
 
 @mixin form-button {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 26px;
 }
 
 @mixin common-title-tablet {
-  font-family: "Oswald", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
   font-size: 60px;
   line-height: 60px;
