--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -19,12 +19,15 @@
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 160px 70px 54px;
+    padding-left: 80px;
   }
 
   @media (min-width: $desktop-width) {
+    padding-left: 80px;
     margin-bottom: 80px;
   }
 }
@@ -45,7 +48,6 @@
 
   @media (min-width: $desktop-width) {
     text-align: left;
-    padding-left: 80px;
     margin-bottom: 40px;
   }
 }
@@ -72,7 +74,6 @@
   @media (min-width: $desktop-width) {
     margin: 0;
     padding: 0;
-    padding-left: 80px;
   }
 }
 
@@ -82,7 +83,7 @@
 
   @media (min-width: $tablet-width) {
     grid-column: 1 / 3;
-    grid-row: 2 / 6;
+    grid-row: 3 / 6;
   }
 }
 
@@ -94,10 +95,13 @@
     grid-row: 3 / 4;
     padding-top: 17px;
     padding-bottom: 17px;
+    position: absolute;
+    top: 18px;
+    left: 40px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 80px;
+    position: static;
   }
 }
 
