--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,8 +1,10 @@
 .promo {
-  background-image: linear-gradient(to top, #ffffff 240px, rgba(104, 183, 56, 0.85) 200px), url("../img/index-background-mobile.png");
+  background-image:
+    linear-gradient(to top, #ffffff 240px, rgba(104, 183, 56, 0.85) 200px),
+    image-set(url("../../images/index-background-mobile@1x.png") type("image/png") 1x, url("../../images/index-background-mobile@2x.png") type("image/png") 2x, url("../../images/index-background-mobile@1x.webp") type("image/webp") 1x, url("../../images/index-background-mobile@2x.webp") type("image/webp") 2x);
   background-repeat: no-repeat;
   background-position: top center;
-  min-width: max-content;
+  background-size: contain;
   padding-top: 27px;
   padding-bottom: 20px;
 
@@ -95,9 +97,6 @@
     grid-row: 3 / 4;
     padding-top: 17px;
     padding-bottom: 17px;
-    position: absolute;
-    top: 18px;
-    left: 40px;
   }
 
   @media (min-width: $desktop-width) {
