--- a/source/styles/blocks/page-header.scss
+++ b/source/styles/blocks/page-header.scss
@@ -29,7 +29,9 @@
 .page-header--index::before {
   @media (min-width: $desktop-width) {
     content: "";
-    background-image: linear-gradient(to top, $base-white 0, rgba(105, 183, 56, 0.85) 0), url("../img/index-background-desktop.png");
+    background-image:
+      linear-gradient(to top, #ffffff 0, rgba(104, 183, 56, 0.85) 0),
+      image-set(url("../../images/index-background-desktop@1x.png") type("image/png") 1x, url("../../images/index-background-desktop@2x.png") type("image/png") 2x, url("../../images/index-background-desktop@1x.webp") type("image/webp") 1x, url("../../images/index-background-desktop@2x.webp") type("image/webp") 2x);
     height: 694px;
     position: absolute;
     left: 50%;
