--- a/source/styles/blocks/social.scss
+++ b/source/styles/blocks/social.scss
@@ -1,11 +1,12 @@
 .social__list {
   @include list-reset;
-  padding: 20px;
-  margin-bottom: 20px;
   display: grid;
   grid-template-columns: repeat(3, 28px);
   justify-content: center;
+  align-items: center;
   gap: 24px;
+  padding: 20px;
+  margin-bottom: 20px;
   border-top: 1px solid $light-special-gray;
   border-bottom: 1px solid $light-special-gray;
 
@@ -19,4 +20,34 @@
 .social__link {
   @include link-reset;
   color: $base-black;
+}
+
+.social__link--vk {
+  width: 28px;
+  height: 28px;
+  mask-image: url("../../icons/icon-vk.svg");
+  mask-repeat: no-repeat;
+  mask-size: 27px 17px;
+  mask-position: center;
+  background-color: #666666;
+}
+
+.social__link--youtube {
+  width: 28px;
+  height: 28px;
+  mask-image: url("../../icons/icon-yt.svg");
+  mask-repeat: no-repeat;
+  mask-size: 24px 18px;
+  mask-position: center;
+  background-color: #666666;
+}
+
+.social__link--tg {
+  width: 28px;
+  height: 28px;
+  mask-image: url("../../icons/icon-tg.svg");
+  background-color: #666666;
+  mask-repeat: no-repeat;
+  mask-size: 20px 17px;
+  mask-position: center;
 }
