--- a/source/styles/blocks/button.scss
+++ b/source/styles/blocks/button.scss
@@ -1,10 +1,8 @@
 .button {
   @include link-reset;
+  @include product-title;
   background-color: $base-green;
   color: $base-white;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 20px;
   text-transform: uppercase;
   width: 100%;
   padding-top: 10px;
