--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -12,15 +12,20 @@
   }
 }
 
+.product__container {
+  width: 280px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 .product__catalog-wrapper {
   width: 50%;
+  padding-top: 20px;
 }
 
 .product__image-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
+  margin: auto;
 }
 
 .product__link {
@@ -31,4 +36,52 @@
 .product__title {
   @include product-title;
   margin: 0;
+}
+
+.product__info {
+  @include product-info;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+}
+
+.product__button {
+  grid-column: 1 / 3;
+}
+
+.product__description {
+  @include product-title;
+  margin: 0;
+  padding-bottom: 8px;
+  grid-column: 1 / 3;
+}
+
+.product__text {
+  @include product-info;
+  grid-column: 1 / 3;
+  margin: 0;
+  padding-bottom: 21px;
+}
+
+.product__more {
+  text-align: center;
+  padding-top: 78px;
+  padding-bottom: 24px;
+}
+
+.product__button--more {
+  background-color: $basic-grey;
+  color: $dark-gray;
+  grid-column: 1 / 3;
+
+  &:before {
+    content: "";
+    width: 30px;
+    height: 30px;
+    background-image: url(../../icons/plus.svg);
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 21px;
+    left: 142px;
+  }
 }
