--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -18,6 +18,7 @@
     margin: auto;
   }
 }
+
 .catalog__list {
   @include list-reset;
   padding-bottom: 25px;
@@ -40,8 +41,8 @@
 }
 
 .catalog__item {
-  position: relative;
   border-bottom: 1px solid $light-special-gray;
+
   &:first-of-type {
     border-top: 1px solid $light-special-gray;
   }
@@ -85,12 +86,20 @@
 
 .catalog__product-info {
   @include product-info;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column: 1 / 3;
+  margin: 0;
+}
 
-  @media (min-width: $tablet-width) {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    flex-direction: column;
-  }
+.catalog__product-info dd {
+  margin: 0;
+  padding: 13px 0 18px;
+}
+
+.catalog__product-definition {
+  text-align: right;
+  padding: 13px 0 18px;
 }
 
 .catalog--other {
@@ -132,6 +141,8 @@
 }
 
 .catalog__item--other {
+  padding: 13px 0 19px;
+
   @media (min-width: $tablet-width) {
     flex-direction: column;
     padding: 26px 38px;
