--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -67,21 +67,14 @@
   text-align: center;
   padding-top: 78px;
   padding-bottom: 24px;
+  background-image: url("../../icons/plus.svg");
+  background-repeat: no-repeat;
+  background-size: 30px 30px;
+  background-position: 50% 10%;
 }
 
 .product__button--more {
   background-color: $basic-grey;
   color: $dark-gray;
   grid-column: 1 / 3;
-
-  &:before {
-    content: "";
-    width: 30px;
-    height: 30px;
-    background-image: url(../../icons/plus.svg);
-    background-repeat: no-repeat;
-    position: absolute;
-    top: 21px;
-    left: 142px;
-  }
 }
