--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -143,7 +143,10 @@
 }
 
 .form__module-radio {
+  display: grid;
+  grid-template-columns: auto 1fr;
   margin-bottom: 19px;
+  position: relative;
 }
 
 .form__module-radio:last-child {
@@ -285,6 +288,8 @@
 }
 
 .form__module-check {
+  display: grid;
+  grid-template-columns: auto 1fr;
   margin-bottom: 13px;
 
   @media (min-width: $tablet-width) {
@@ -298,6 +303,20 @@
   @media (min-width: $tablet-width) {
     margin: 0;
   }
+}
+
+.form__checkbox-input {
+  width: 30px;
+  height: 30px;
+  background-color: $base-white;
+  border: 1px solid $special-gray;
+  appearance: none;
+}
+
+.form__checkbox-input[type="checkbox"]:checked {
+  background-image: url("../../icons/icon-check-mark.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .form__submit-note {
@@ -362,5 +381,26 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 80px;
+  }
+}
+
+.form__radio-input {
+  margin: 0;
+  width: 30px;
+  height: 30px;
+  appearance: none;
+  border: 1px solid $special-gray;
+  border-radius: 50%;
+
+  &[type="radio"]:checked::after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    width: 13px;
+    height: 13px;
+    background-color: $base-green;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
   }
 }
