--- a/source/styles/blocks/main.scss
+++ b/source/styles/blocks/main.scss
@@ -7,6 +7,8 @@
 
   @media (min-width: $tablet-width) {
     margin-bottom: 60px;
+    grid-template-columns: 1fr 1fr;
+    display: grid;
   }
 }
 
