--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -2,10 +2,8 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 0 0 24px;
 
   @media (min-width: $tablet-width) {
-    display: flex;
     flex-direction: column;
     background-color: $basic-grey;
     padding: 0;
@@ -63,18 +61,13 @@
   padding-bottom: 21px;
 }
 
-.product__more {
+.product--more {
   text-align: center;
   padding-top: 78px;
   padding-bottom: 24px;
+  border-bottom: 1px solid $light-special-gray;
   background-image: url("../../icons/plus.svg");
   background-repeat: no-repeat;
   background-size: 30px 30px;
   background-position: 50% 10%;
-}
-
-.product__button--more {
-  background-color: $basic-grey;
-  color: $dark-gray;
-  grid-column: 1 / 3;
 }
