--- a/source/styles/blocks/promo.scss
+++ b/source/styles/blocks/promo.scss
@@ -1,6 +1,6 @@
 .promo {
   background-image:
-    linear-gradient(to top, #ffffff 200px, rgba(104, 183, 56, 0.85) 200px),
+    linear-gradient(to top, #ffffff 316px, rgba(104, 183, 56, 0.85) 200px),
     image-set(url("../../images/index-background-mobile@1x.png") type("image/png") 1x, url("../../images/index-background-mobile@2x.png") type("image/png") 2x, url("../../images/index-background-mobile@1x.webp") type("image/webp") 1x, url("../../images/index-background-mobile@2x.webp") type("image/webp") 2x);
   background-repeat: no-repeat;
   background-position: top center;
@@ -9,27 +9,37 @@
 
   @media (min-width: $tablet-width) {
     background: none;
+    padding-top: 0;
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 216px;
+    padding-bottom: 266px;
   }
 }
 
 .promo__container {
+  display: grid;
+  gap: 25px;
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    grid-template-columns: 120px 1fr 56px;
+    grid-template-rows: repeat(3, auto);
+    gap: 0;
     position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 160px 70px 54px;
-    padding-left: 80px;
   }
 
   @media (min-width: $desktop-width) {
-    padding-left: 80px;
+    grid-template-rows: 160px 72px 54px;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 110px;
     margin-bottom: 80px;
+  }
+}
+
+.promo__container picture {
+  @media (min-width: $tablet-width) {
+    display: contents;
   }
 }
 
@@ -37,19 +47,18 @@
   @include common-title;
   color: $base-white;
   margin: 0;
-  padding: 0 0 25px;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
     line-height: 60px;
     text-align: left;
     color: #000000;
-    grid-column: 1 / 3;
+    grid-column: 2 / 4;
+    margin-bottom: 40px;
   }
 
   @media (min-width: $desktop-width) {
-    text-align: left;
-    margin-bottom: 40px;
+    grid-column: 1;
   }
 }
 
@@ -60,21 +69,20 @@
   line-height: 14px;
   text-transform: uppercase;
   margin: 0;
-  padding-bottom: 29px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 20px;
     text-align: left;
     color: #000000;
-    grid-column: 1 / 3;
+    grid-column: 2 / 3;
     grid-row: 2 / 3;
-    padding-bottom: 0;
+    margin-bottom: 50px;
   }
 
   @media (min-width: $desktop-width) {
-    margin: 0;
-    padding: 0;
+    grid-column: 1;
+    margin-bottom: 52px;
   }
 }
 
@@ -83,23 +91,30 @@
   margin: auto;
 
   @media (min-width: $tablet-width) {
-    grid-column: 1 / 3;
-    grid-row: 3 / 6;
+    grid-column: 2 / 3;
+    grid-row: 3 / 5;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-area: 1 / 2 / 4 / -1;
+    margin-block-start: -80px;
+    margin-inline-start: -160px;
   }
 }
 
 .promo__button {
   @media (min-width: $tablet-width) {
     width: 244px;
-    margin-bottom: 0;
-    grid-column: 1 / 2;
+    grid-column: 2 / 2;
     grid-row: 3 / 4;
     padding-top: 17px;
     padding-bottom: 17px;
+    margin-top: 10px;
   }
 
   @media (min-width: $desktop-width) {
-    position: static;
+    grid-column: 3 / 1;
+    margin-top: 0;
   }
 }
 
