--- a/source/styles/mixins.scss
+++ b/source/styles/mixins.scss
@@ -24,6 +24,13 @@
   line-height: 36px;
 }
 
+@mixin common-title-2 {
+  font-family: "Oswald", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 40px;
+}
+
 @mixin common-title-big {
   font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
