--- a/source/styles/blocks/product.scss
+++ b/source/styles/blocks/product.scss
@@ -1,57 +1,117 @@
 .product {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-
   @media (min-width: $tablet-width) {
-    flex-direction: column;
     background-color: $basic-grey;
-    padding: 0;
+
+    &:last-child {
+      background-color: $base-white;
+    }
   }
 }
 
 .product__container {
   width: 280px;
   margin: auto;
+  padding-top: 20px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-}
 
-.product__catalog-wrapper {
-  width: 50%;
-  padding-top: 20px;
+  @media (min-width: $tablet-width) {
+    grid-template-rows: 172px auto auto 1fr;
+    padding-top: 0;
+    padding-bottom: 40px;
+    padding-inline: 15px;
+  }
 }
 
 .product__image-wrapper {
   margin: auto;
+  grid-row: 1 / 3;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / 3;
+  }
+}
+
+.product__image {
+  @media (min-width: $tablet-width) {
+    margin-block-start: -150px;
+  }
 }
 
 .product__link {
   @include link-reset;
   color: $base-black;
+
+  @media (min-width: $tablet-width) {
+    text-align: center;
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    padding-inline: 65px;
+  }
 }
 
 .product__title {
   @include product-title;
+  text-transform: uppercase;
   margin: 0;
+
+  @media (min-width: $tablet-width) {
+    @include product-title-tablet;
+
+    br {
+      display: none;
+    }
+  }
 }
 
 .product__info {
   @include product-info;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 100%;
+  grid-column: 2 / 3;
+
+  @media (min-width: $tablet-width) {
+    @include product-info-tablet;
+    grid-column: 1 / 3;
+    row-gap: 10px;
+    margin: 0;
+    padding-top: 20px;
+    padding-bottom: 32px;
+  }
+}
+
+.product__info dd {
+  @media (min-width: $tablet-width) {
+    text-align: end;
+  }
+}
+
+.product__info-item {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column: 1 / 3;
+    box-shadow: inset 0 -1px 0 0 $special-gray;
+  }
 }
 
 .product__button {
   grid-column: 1 / 3;
+  grid-row: 4 / 5;
 }
 
 .product__description {
   @include product-title;
+  text-transform: uppercase;
   margin: 0;
   padding-bottom: 8px;
   grid-column: 1 / 3;
+
+  @media (min-width: $tablet-width) {
+    @include product-title-tablet;
+    padding-inline: 50px;
+    padding-block-end: 23px;
+  }
 }
 
 .product__text {
@@ -59,6 +119,19 @@
   grid-column: 1 / 3;
   margin: 0;
   padding-bottom: 21px;
+
+  @media (min-width: $tablet-width) {
+    @include product-info-tablet;
+    padding-inline: 20px;
+    padding-block-end: 62px;
+  }
+}
+
+.product__more {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-rows: 1fr 1fr 40px;
+  }
 }
 
 .product--more {
@@ -70,4 +143,12 @@
   background-repeat: no-repeat;
   background-size: 30px 30px;
   background-position: 50% 10%;
+
+  @media (min-width: $tablet-width) {
+    border-bottom: none;
+    box-shadow: inset 0 0 0 1px $basic-grey;
+    background-size: 60px 60px;
+    padding-top: 147px;
+    padding-inline: 37px;
+  }
 }
